--- a/app/src/main/res/layout/fragment_events.xml
+++ b/app/src/main/res/layout/fragment_events.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.recyclerview.widget.RecyclerView
+
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/events_recyclerView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="8dp"
-    tools:context=".ui.events.EventsFragment"
-    />
+    android:id="@+id/swipeRefresh">
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/eventsRv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="8dp"
+        tools:context=".ui.events.EventsFragment"
+        />
+
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
