--- a/app/src/main/res/layout/commentary_list_item.xml
+++ b/app/src/main/res/layout/commentary_list_item.xml
@@ -9,7 +9,7 @@
 
     <TextView
         android:id="@+id/time"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:ems="4"
@@ -23,10 +23,11 @@
 
     <TextView
         android:id="@+id/type"
-        android:layout_width="60dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:gravity="center"
+        android:ems="5"
         android:padding="2dp"
         android:textColor="@color/white"
         android:textSize="12sp"
